--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -17,7 +17,8 @@
     <p class="lead text-center">Fly Eagles Fly</p>
     <hr class="my-4">
 </div>
-<a href="/add"class="btn btn-success btn-lg active btn-block" role="button">Add a Flight</a><br />
+<div id="planeBackground">
+<a href="/add"class="btn btn-primary btn-lg active btn-block" role="button">Add a Flight</a><br />
 <table class="table">
     <thead class ="thead-dark">
     <tr>
@@ -51,5 +52,6 @@
 
     </tr>
 </table>
+</div>
 </body>
 </html>
