--- a/src/main/resources/templates/searchlist.html
+++ b/src/main/resources/templates/searchlist.html
@@ -18,6 +18,8 @@
     <p class="lead text-center">Fly Eagles Fly</p>
     <hr class="my-4">
 </div>
+
+<div class="container" id="planeBackground">
 <a href="/add"class="btn btn-success btn-lg active btn-block" role="button">Add a Flight</a><br />
 <table class="table">
     <thead class ="thead-dark">
@@ -52,7 +54,6 @@
 
     </tr>
 </table>
-
-<footer></footer>
+</div>
 </body>
 </html>
