--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -29,7 +29,7 @@
         </ul>
         <form class="form-inline my-2 my-lg-0" th:action="@{/searchlist}" method="post">
             <input class="form-control mr-sm-2" type="search" name="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+            <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Search</button>
         </form>
     </div>
 </nav>
