--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -35,6 +35,6 @@
 </nav>
 </div>
 <!-- footer area -->
-<div th:fragment="footer">Don't Be Afraid to Fly</div>
+<div th:fragment="footer" class="centered">Don't Be Afraid to Fly</div>
 </body>
 </html>
