--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -8,7 +8,7 @@
     left: 0;
     bottom: 0;
     width: 100%;
-    background-color: darkgreen;
+    background-color: deepskyblue;
     color: white;
     text-align: center;
 }
