--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -5,7 +5,13 @@
     <title>Title</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" th:href="@{/style.css}">
-
+    <style type="text/css">
+        .custom {
+            font-family: Courier;
+            color: white;
+            font-size:15px;
+        }
+    </style>
 </head>
 <body>
 
@@ -17,11 +23,11 @@
     <p class="lead text-center">Fly Eagles Fly</p>
     <hr class="my-4">
 </div>
-<div id="planeBackground">
+<div id="planeBackground" class="custom">
 <a href="/add"class="btn btn-primary btn-lg active btn-block" role="button">Add a Flight</a><br />
-<table class="table">
+<table class="table custom">
     <thead class ="thead-dark">
-    <tr>
+    <tr class="custom">
         <th scope="col">Departing Flight</th>
         <th scope="col">Arriving Flight</th>
         <th scope="col">Flight Type</th>
@@ -30,7 +36,7 @@
         <th scope="col">Flight Number</th>
     </tr>
     </thead>
-    <tr th:each="flight : ${flights}" >
+    <tr th:each="flight : ${flights}" class="custom">
         <td th:text="${flight.departingAirport}"></td>
         <td th:text="${flight.arrivingAirport}"></td>
         <td th:text="${flight.type}"></td>
@@ -42,9 +48,9 @@
         </td>
         <td>
 
-            <a th:href="@{/list/{id}(id=${flight.id})}"> <button type="button" class="btn btn-success btn-sm">list </button> </a> -
+            <a th:href="@{/list/{id}(id=${flight.id})}"> <button type="button" class="btn btn-primary btn-sm">list </button> </a> -
 
-            <a th:href="@{/update/{id}(id=${flight.id})}"> <button type="button" class="btn btn-success btn-sm">update </button> </a> -
+            <a th:href="@{/update/{id}(id=${flight.id})}"> <button type="button" class="btn btn-primary btn-sm">update </button> </a> -
 
             <a th:href="@{/delete/{id}(id=${flight.id})}"> <button type="button" class="btn btn-dark btn-sm">delete </button> </a>
         </td>
