--- a/src/main/resources/templates/searchlist.html
+++ b/src/main/resources/templates/searchlist.html
@@ -6,7 +6,13 @@
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" th:href="@{/style.css}">
-
+    <style type="text/css">
+        .custom {
+            font-family: Courier;
+            color: white;
+            font-size:15px;
+        }
+    </style>
 </head>
 <body>
 
@@ -19,11 +25,11 @@
     <hr class="my-4">
 </div>
 
-<div class="container" id="planeBackground">
-<a href="/add"class="btn btn-success btn-lg active btn-block" role="button">Add a Flight</a><br />
+<div class="container custom" id="planeBackground">
+<a href="/add"class="btn btn-primary btn-lg active btn-block" role="button">Add a Flight</a><br />
 <table class="table">
     <thead class ="thead-dark">
-    <tr>
+    <tr class="custom">
         <th scope="col">Departing Flight</th>
         <th scope="col">Arriving Flight</th>
         <th scope="col">Flight Type</th>
@@ -44,9 +50,9 @@
         </td>
         <td>
 
-            <a th:href="@{/list/{id}(id=${flight.id})}"> <button type="button" class="btn btn-success btn-sm">list </button> </a> -
+            <a th:href="@{/list/{id}(id=${flight.id})}"> <button type="button" class="btn btn-primary btn-sm">list </button> </a> -
 
-            <a th:href="@{/update/{id}(id=${flight.id})}"> <button type="button" class="btn btn-success btn-sm">update </button> </a> -
+            <a th:href="@{/update/{id}(id=${flight.id})}"> <button type="button" class="btn btn-primary btn-sm">update </button> </a> -
 
             <a th:href="@{/delete/{id}(id=${flight.id})}"> <button type="button" class="btn btn-dark btn-sm">delete </button> </a>
         </td>
